2012-03-04  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (split_str): Separator can be a regex now.

2012-03-04  Kaz Kylheku  <kaz@kylheku.com>

	Version 60

	* txr.c (version): Bumped.

	* txr.1: Bumped version and set date.

	* configure (txr_ver): Bumped.

	* RELNOTES: Updated.

	* txr.vim: Handle : symbol properly.

2012-03-04  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (plus): Showstopper bug: plus(bignum, fixnum)
	broken for fixnum <= 0. Bad pointer passed to MPI.

2012-03-04  Kaz Kylheku  <kaz@kylheku.com>

	* mpi-patches/add-mp-hash (mp_hash): Fixed use of uninitialized
	variable on platforms where the MP digit is smaller than a long integer.
	(Not anything TXR is known to run on). Changed algorithm to take the
	first and last digit and add them together, rather than just taking the
	last digit. The last digit will be zeros for numbers that contain 2 as a
	factor with a large enough multiplicity.

	* mpi-patches/add-mpi-toradix-with-case: Refreshed.

	* mpi-patches/bit-search-optimizations: Likewise.

	* mpi-patches/faster-square-root: Likewise.

	* mpi-patches/fix-bad-shifts: Likewise.

	* mpi-patches/fix-mult-bug: Likewise.

2012-03-04  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (op_defun): Bugfix: documentation says that defun supports
	the same parameter list as lambda, and that is the intent. But
	this was broken, since op_defun was expecting the parameter list
	to be a proper list containing only bindable symbols, ruling out
	the use of the consing dot for rest parameter as well as the colon
	keyword symbol for optional parmeters.

2012-03-03  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Expose remq, remql and remqual.

	* txr.1: Documented.

2012-03-03  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (sub_str): Removed second check for lazy string that
	can't ever come out true.

	* match.c (search_form, h_var, h_coll, h_parallel, h_fun): Handle
	position t emanating from match_line, indicating match to end of line.