@@ -2178,6 +2178,7 @@ void eval_init(void)
 
   reg_fun(intern(lit("search-regex"), user_package), func_n4o(search_regex, 2));
   reg_fun(intern(lit("match-regex"), user_package), func_n3o(match_regex, 2));
+  reg_fun(intern(lit("regsub"), user_package), func_n3(regsub));
 
   reg_fun(intern(lit("make-hash"), user_package), func_n3(make_hash));
   reg_fun(intern(lit("hash"), user_package), func_n0v(hashv));
