@@ -28,3 +28,4 @@ val regex_compile(val regex_sexp);
 val regexp(val);
 val search_regex(val haystack, val needle_regex, val start_num, val from_end);
 val match_regex(val str, val regex, val pos);
+val regsub(val str, val regex, val repl);
