@@ -6518,6 +6518,8 @@ Certain object types have a custom equal function.
 
 .SS Functions search-regex and match-regex
 
+.SS Function regsub
+
 .SS Functions make-hash, hash
 
 .SS Function sethash
