@@ -1,5 +1,15 @@
 2012-03-04  Kaz Kylheku  <kaz@kylheku.com>
 
+	* eval.c (eval_init): New intrinsic function, regsub.
+
+	* regex.c (regsub): New function.
+
+	* regex.h (regsub): Declared.
+
+	* txr.1: Doc stub added.
+
+2012-03-04  Kaz Kylheku  <kaz@kylheku.com>
+
 	* lib.c (split_str): Separator can be a regex now.
 
 2012-03-04  Kaz Kylheku  <kaz@kylheku.com>
